# BigQuery-SodirChat

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  query.py  refresh_vectors.py  scraper.py  setup_once.py  upload_bucket.py  utils_bq_vec.py
